--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,11 +24,11 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - if: ${{github.event_name == "discussion"}}
-        run: discussion title ${{github.event.discussion.title}}
-      - if: ${{github.event_name == "issue"}}
-        run: issue title ${{github.event.issue.title}}
-      - if: ${{github.event_name == "pull_request"}}
-        run: pr title ${{github.event.pull_request.title}}
-      - if: ${{github.event_name == "discussion_comment"}}
-        run: comment body ${{github.event.comment.body}}
+      - if: ${{github.event_name == 'discussion'}}
+        run: echo "discussion title ${{github.event.discussion.title}}"
+      - if: ${{github.event_name == 'issue'}}
+        run: echo "issue title ${{github.event.issue.title}}"
+      - if: ${{github.event_name == 'pull_request'}}
+        run: echo "pr title ${{github.event.pull_request.title}}"
+      - if: ${{github.event_name == 'discussion_comment'}}
+        run: echo "comment body ${{github.event.comment.body}}"
