--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,5 +30,5 @@ jobs:
         run: echo "issue title ${{github.event.issue.title}}"
       - if: ${{github.event_name == 'pull_request_review'}}
         run: echo "pr title ${{github.event.pull_request.title}}"
-      - if: ${{github.event_name == 'discussion_comment'}}
+      - if: ${{github.event_name == 'discussion_comment' || github.event_name == 'issue_comment'}}
         run: echo "comment body ${{github.event.comment.body}}"
